# gggp

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/gggp/: __init__.py
src/: lib.rs
tests/: test_core.py
