[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "olkhovoy-gggp"
description = "Rust-powered GGGP core with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alexander Olkhovoy" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "gggp._core"
features = ["pyo3/extension-module"]

